--- a/catalogo.html
+++ b/catalogo.html
@@ -23,8 +23,8 @@
                 <li class="nav-item"> <a class="nav-link active" href="home.html">Inicio</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="home.html#sobre-nos">Sobre Nós</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="catalogo.html">Catálogo</a> </li>
-                <li class="nav-item"> <a class="nav-link" href="carrinho.html">Seu Carrinho</a> </li>
                 <li class="nav-item edit"> <a class="nav-link" href="adm.html">Editar Catálogo</a> </li>
+                <li class="nav-item"> <a class="nav-link carrinho-link" href="carrinho.html"><i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i></a> </li>
             </ul>
         </div>
 
