--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="assets/css/home.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <header id="header">
@@ -21,8 +22,8 @@
                     <li class="nav-item"> <a class="nav-link active" href="#inicio">Inicio</a> </li>
                     <li class="nav-item"> <a class="nav-link" href="#sobre-nos">Sobre Nós</a> </li>
                     <li class="nav-item"> <a class="nav-link" href="catalogo.html">Catálogo</a> </li>
-                    <li class="nav-item"> <a class="nav-link" href="carrinho.html">Seu Carrinho</a> </li>
                     <li class="nav-item edit"> <a class="nav-link" href="adm.html">Editar Catálogo</a> </li>
+                    <li class="nav-item"> <a class="nav-link carrinho-link" href="carrinho.html"><i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i></a> </li>
 
                 </ul>
             </div>
