--- a/carrinho.html
+++ b/carrinho.html
@@ -6,6 +6,7 @@
     <title>Carrinho</title>
     <link rel="stylesheet" href="assets/css/carrinho.css">
     <link rel="stylesheet" href="assets/css/checkout.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -23,8 +24,8 @@
                     <li class="nav-item"> <a class="nav-link active" href="home.html">Inicio</a> </li>
                     <li class="nav-item"> <a class="nav-link" href="#sobre-nos">Sobre Nós</a> </li>
                     <li class="nav-item"> <a class="nav-link" href="catalogo.html">Catálogo</a> </li>
-                    <li class="nav-item"> <a class="nav-link" href="carrinho.html">Seu Carrinho</a> </li>
                     <li class="nav-item edit"> <a class="nav-link" href="adm.html">Editar Catálogo</a> </li>
+                    <li class="nav-item"> <a class="nav-link carrinho-link" href="carrinho.html"><i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i></a> </li>
                 </ul>
             </div>
     
