--- a/adm.html
+++ b/adm.html
@@ -18,7 +18,7 @@
         </a>
         <div class="nav-list">
             <ul>
-                <li class="nav-item"> <a class="nav-link active" href="home.html">Inicio</a> </li>
+                <li class="nav-item"> <a class="nav-link active" href="home.html">Início</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="home.html#sobre-nos">Sobre Nós</a> </li>
                 <li class="nav-item"> <a class="nav-link" href="catalogo.html">Catálogo</a> </li>
                 <li class="nav-item edit"> <a class="nav-link" href="adm.html">Editar Catálogo</a> </li>
