--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
 
             <div class="nav-list">
                 <ul>
-                    <li class="nav-item"> <a class="nav-link active" href="#inicio">Inicio</a> </li>
+                    <li class="nav-item"> <a class="nav-link active" href="#inicio">Início</a> </li>
                     <li class="nav-item"> <a class="nav-link" href="#sobre-nos">Sobre Nós</a> </li>
                     <li class="nav-item"> <a class="nav-link" href="catalogo.html">Catálogo</a> </li>
                     <li class="nav-item edit"> <a class="nav-link" href="adm.html">Editar Catálogo</a> </li>
